2002-11-03  Larry Ewing  <lewing@ximian.com>

	* htmlgdkpainter.c (draw_pixmap): fix coloring logic.
	(create_temporary_pixbuf): clear the pixbuf before we use it.

	* htmlimage.c (html_image_factory_types): add disabled code to use
	gtk-pixbuf features in gtk+-2.2

	* htmltext.c (append_selection_string): use g_string_function that
	exists now.

	* htmlgdkpainter.c (draw_pixmap): remove a bunch of code now that
	gdk can do real alpha blending.
	(html_gdk_painter_realize): use html_painter_alloc_color instead
	of doing ourselves.
	(alloc_color): get the color from the gdkrgb color cube, don't try
	to alloc it ourselves.
	(free_color): don't need to do anything here now.  The color code
	can be vastly simplified now with the new interfaces but we should
	do a step by step refactoring and this is the first step.

	* htmlimage.c: move the timeout into the image_pointer so that we
	only queue one per url, refactor start, stop and timeout functions
	for the new logic.
	(html_image_pointer_run_animation): don't try to draw images
	without animations (happens in c&p images).

	* htmlimage.h: move animation timeout from HTMLImage to
	HTMLImagePointer.

2002-11-03  Larry Ewing  <lewing@ximian.com>

	* htmlimage.h: remove pixbuf argument from HTMLImagePointer, we
	use animations for holding everything now.  Add an iter structure.

	* htmlimage.c: add initial support for animations back into html
	image.

	* htmltablecell.c (draw_background_helper): use animation
	structure now.

	* htmlengine.c (html_engine_draw_background): use animation
	structure now.

2002-11-02  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (ucs2_order): fix the names of UCS-2BE and UCS-2LE,
	and captialize the rest for fun.
	(selection_get): use the new gtk functions to convert strings
	for selections and clean up logic.
	(selection_received): use the new gtk functions to handle charset
	conversion and clean up logic.
	(scroll_timeout_cb): add the offsets.
	(motion_notify_event): remove the offsets.